--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -23,7 +23,7 @@
 	Egypt-Kahira 2014
 </h1>
 
-	 <img src="img-kyanotypia/MBona.jpg" height="100%" width="100%"alt="">
+	 <img src="1.test/img-kyanotypia/MBona.jpg" height="100%" width="100%"alt="">
 	 <img src="img-kyanotypia/MBfunguje.jpg" height="100%" width="100%"alt="">
 	 <img src="img-kyanotypia/MBnacestahch.jpg"100% width="100%"alt="">
    <img src="img-kyanotypia/MBbuducnostnejasna.jpg"100% width="100%"alt="">
