--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kyanotypia</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style-kyanotypia.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono" >
 
 </head>
