--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -19,13 +19,12 @@
 
 
 <div class="fotky">
-	 <img class="foto" src="img/MBona.jpg" height="100%" width="100%"alt="">
-	 <img class="foto"  src="img/MBfunguje.jpg" height="100%" width="100%"alt="">
-	 <img class="foto"  src="img/MBnacestahch.jpg"100% width="100%"alt="">
+	 <img class="foto" src="img-kyanotypia/MBona.jpg" height="100%" width="100%"alt="">
+	 <img class="foto"  src="img-kyanotypia/MBfunguje.jpg" height="100%" width="100%"alt="">
+	 <img class="foto"  src="img-kyanotypia/MBnacestahch.jpg"100% width="100%"alt="">
    <img class="foto"  src="img/MBbuducnostnejasna.jpg"100% width="100%"alt="">
-
-   <img class="foto"  src="img/MBdoneznama.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img/MBpartia.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypia/MBdoneznama.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypia/MBpartia.jpg"100% width="100%"alt="">
 </div>
 
 
