--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -11,20 +11,29 @@
 
 <body>
 
+
+<div>
 <div class="topnav" id="myTopnav">
-  <a href="http://samayel.com/" href="#home" class="active">SAMAYEL</a>
+  <a href="http://samayel.com/" href="#home" class=" active">SAMAYEL</a>
+</div>
+    <div class="nadpis" >
+      <a  class="podnapdpis" >Kyanotypia <br></a>
+      <a  class="podnapdpis" >Egypt-Kahira 2014</a>
+    </div>
 </div>
 
 
 
 
 <div class="fotky">
-	 <img class="foto" src="img-kyanotypia/MBona.jpg" height="100%" width="100%"alt="">
-	 <img class="foto"  src="img-kyanotypia/MBfunguje.jpg" height="100%" width="100%"alt="">
-	 <img class="foto"  src="img-kyanotypia/MBnacestahch.jpg"100% width="100%"alt="">
+	 <img class="foto" src="img-kyanotypya/MBona.jpg" height="auto" width="40%"alt="">
+	<!--  <img class="foto"  src="img/MBfunguje.jpg" height="100%" width="auto"alt="">
+	 <img class="foto"  src="img/MBnacestahch.jpg"100% width="auto"alt="">
    <img class="foto"  src="img/MBbuducnostnejasna.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img-kyanotypia/MBdoneznama.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img-kyanotypia/MBpartia.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img/MBdoneznama.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img/MBpartia.jpg"100% width="100%"alt="">
+
+ -->
 </div>
 
 
