--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -26,15 +26,42 @@
 
 
 <div class="fotky">
-	 <img class="foto" src="img-kyanotypya/MBona.jpg" height="auto" width="40%"alt="">
-	<!--  <img class="foto"  src="img/MBfunguje.jpg" height="100%" width="auto"alt="">
-	 <img class="foto"  src="img/MBnacestahch.jpg"100% width="auto"alt="">
-   <img class="foto"  src="img/MBbuducnostnejasna.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img/MBdoneznama.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img/MBpartia.jpg"100% width="100%"alt="">
+   <img class="foto" src="img-kyanotypya/MBona.jpg" height="auto" width="40%"alt="">
+   <img-kyanotypya class="foto"  src="img/MBfunguje.jpg" height="100%" width="auto"alt="">
+   <img-kyanotypya class="foto"  src="img/MBnacestahch.jpg"100% width="auto"alt="">
+   <img-kyanotypya class="foto"  src="img/MBbuducnostnejasna.jpg"100% width="100%"alt="">
+   <img-kyanotypya class="foto"  src="img/MBdoneznama.jpg"100% width="100%"alt="">
+   <img-kyanotypya class="foto"  src="img/MBpartia.jpg"100% width="100%"alt="">
 
- -->
+ 
 </div>
+
+
+
+
+<main2>
+
+       <section>
+        <figure>
+          <img class="foto-technologia" src="https://images.pexels.com/photos/944743/pexels-photo-944743.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+        </figure>
+        <article>
+          <h3 class="zvecovak" >Zvecovak</h3>
+        </article>
+      </section>
+
+       <section>
+
+        <article>
+          <span>Social Media</span>
+          <h3>Technologia</h3>
+          <p>Kyanotypia je známa už od roku 1842 keď ju vynašiel John Herschel. Bežný postup je, že nanesiete jemný film roztoku (Citran železitoamonný a Hexakyanoželezitan draselný) na papier alebo iný savý povrch a presvietite negatív, ktorý máte na transparentnej fólii. Veľkosť papiera je rovnaká ako veľkosť negatívu. Bežne sa to rieši spôsobom, že si dáte negatív vytlačiť na fóliu formátu A4. V roku 2015 skupina profesionálnych fotografov Branco Ottico vo Florencii sa pokúsili prelomiť rekord tým, že zlepili veľa menších fólii s negatívom a vytvorili jeden veľký, ktorý mal 24 m2, a podľa neho vytvorili pozitív, ktorý exponovali denným svetlom. Tento postup bol určite dosť nákladný a pre mňa nebolo reálne vytvárať tak veľkú fóliu. Ďalšia nevýhoda bola, že mala na sebe aj deliace spoje. Preto som začal experimentovať s optickou sústavou a nakoniec sa mi podarilo vyrobiť si vlastný zväčšovací pristroj "zväčšovák" , ktorý je určený presne iba na kyanotypiu a zväčovanie na veľký formát rádovo v metroch. Taktiež som optimalizoval nanášanie jemného filmu chémie na textil zhruba 1deci na 2 metre štvorcové. Oproti Branco Ottico, ktorý textil kompletne namáčal v niekoľko litrovej emulzii.</p>
+        </article>
+      </section>
+  </main2>
+
+
+
 
 
 <main>
