--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -27,11 +27,11 @@
 
 <div class="fotky">
    <img class="foto" src="img-kyanotypya/MBona.jpg" height="auto" width="40%"alt="">
-   <img-kyanotypya class="foto"  src="img/MBfunguje.jpg" height="100%" width="auto"alt="">
-   <img-kyanotypya class="foto"  src="img/MBnacestahch.jpg"100% width="auto"alt="">
-   <img-kyanotypya class="foto"  src="img/MBbuducnostnejasna.jpg"100% width="100%"alt="">
-   <img-kyanotypya class="foto"  src="img/MBdoneznama.jpg"100% width="100%"alt="">
-   <img-kyanotypya class="foto"  src="img/MBpartia.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypya/MBfunguje.jpg" height="100%" width="auto"alt="">
+   <img class="foto"  src="img-kyanotypya/MBnacestahch.jpg"100% width="auto"alt="">
+   <img class="foto"  src="img-kyanotypya/MBbuducnostnejasna.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypya/MBdoneznama.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypya/MBpartia.jpg"100% width="100%"alt="">
 
  
 </div>
