--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -26,12 +26,12 @@
 
 
 <div class="fotky">
-   <img class="foto" src="img-kyanotypya/MBona.jpg" height="auto" width="40%"alt="">
-   <img class="foto"  src="img-kyanotypya/MBfunguje.jpg" height="100%" width="auto"alt="">
-   <img class="foto"  src="img-kyanotypya/MBnacestahch.jpg"100% width="auto"alt="">
-   <img class="foto"  src="img-kyanotypya/MBbuducnostnejasna.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img-kyanotypya/MBdoneznama.jpg"100% width="100%"alt="">
-   <img class="foto"  src="img-kyanotypya/MBpartia.jpg"100% width="100%"alt="">
+   <img class="foto" src="img-kyanotypia/MBona.jpg" height="auto" width="40%"alt="">
+   <img class="foto"  src="img-kyanotypia/MBfunguje.jpg" height="100%" width="auto"alt="">
+   <img class="foto"  src="img-kyanotypia/MBnacestahch.jpg"100% width="auto"alt="">
+   <img class="foto"  src="img-kyanotypia/MBbuducnostnejasna.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypia/MBdoneznama.jpg"100% width="100%"alt="">
+   <img class="foto"  src="img-kyanotypia/MBpartia.jpg"100% width="100%"alt="">
 
  
 </div>
