--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -32,8 +32,6 @@
    <img class="foto"  src="img-kyanotypia/MBbuducnostnejasna.jpg"100% width="100%"alt="">
    <img class="foto"  src="img-kyanotypia/MBdoneznama.jpg"100% width="100%"alt="">
    <img class="foto"  src="img-kyanotypia/MBpartia.jpg"100% width="100%"alt="">
-
- 
 </div>
 
 
@@ -42,18 +40,14 @@
 <main2>
 
        <section>
-        <figure>
-          <img class="foto-technologia" src="https://images.pexels.com/photos/944743/pexels-photo-944743.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
-        </figure>
         <article>
-          <h3 class="zvecovak" >Zvecovak</h3>
-        </article>
-      </section>
 
+          <img class="foto-technologia"  src="img-kyanotypia/zvecsovak.jpg"100% width="100%"alt="">
+          <h3>Zvesovak</h3>
+        </section>
        <section>
 
         <article>
-          <span>Social Media</span>
           <h3>Technologia</h3>
           <p>Kyanotypia je známa už od roku 1842 keď ju vynašiel John Herschel. Bežný postup je, že nanesiete jemný film roztoku (Citran železitoamonný a Hexakyanoželezitan draselný) na papier alebo iný savý povrch a presvietite negatív, ktorý máte na transparentnej fólii. Veľkosť papiera je rovnaká ako veľkosť negatívu. Bežne sa to rieši spôsobom, že si dáte negatív vytlačiť na fóliu formátu A4. V roku 2015 skupina profesionálnych fotografov Branco Ottico vo Florencii sa pokúsili prelomiť rekord tým, že zlepili veľa menších fólii s negatívom a vytvorili jeden veľký, ktorý mal 24 m2, a podľa neho vytvorili pozitív, ktorý exponovali denným svetlom. Tento postup bol určite dosť nákladný a pre mňa nebolo reálne vytvárať tak veľkú fóliu. Ďalšia nevýhoda bola, že mala na sebe aj deliace spoje. Preto som začal experimentovať s optickou sústavou a nakoniec sa mi podarilo vyrobiť si vlastný zväčšovací pristroj "zväčšovák" , ktorý je určený presne iba na kyanotypiu a zväčovanie na veľký formát rádovo v metroch. Taktiež som optimalizoval nanášanie jemného filmu chémie na textil zhruba 1deci na 2 metre štvorcové. Oproti Branco Ottico, ktorý textil kompletne namáčal v niekoľko litrovej emulzii.</p>
         </article>
@@ -68,91 +62,84 @@
 
    <section>
     <figure>
-      <img src="https://images.pexels.com/photos/944743/pexels-photo-944743.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+      <img src="img-kyanotypia/ahoj.jpg">
     </figure>
     <article>
-      <span>Social Media</span>
-      <h3>Keeping cool when you’re under attack</h3>
-      <p>Čiernooký chlapec. Predáva po uliciach Káhiry hygienické vreckovky turistom v kontraste so svojim ufúľaným vzhľadom. Pravdepodobne je sirota...Dostane zopár drobných, čo priláka ďalšie deti, ktoré žobrú. Porovnávajú si, kto koľko utŕžil a už trielia k ďalšiemu autobusu plnom turistov. A toto všetko absolvujú denne s jediným balíčkom vreckoviek, veď kto by už mal srdce im ho zobrať... Learn how to maintain your emotional balance when strangers start attacking you online.</p>
+
+      <h3>Ahoj</h3>
+      <p>Tento záber má v sebe pozitívny náboj. Vystihuje určitú polarizáciu dvoch ľudí, respektíve generácií. V pravej strany staršia generácia, ktorá je ortodoxná a  z ľavej strany, ktorá je viac liberálna. Ale priateľské okamihy som mal možnosť zažiť s oboma.</p>
     </article>
   </section>
 
    <section>
     <figure>
-      <img src="https://images.pexels.com/photos/944743/pexels-photo-944743.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+      <img src="img-kyanotypia/doneznama.jpg">
     </figure>
     <article>
-      <span>Social Media</span>
-      <h3>Keeping cool when you’re under attack</h3>
-      <p>Čiernooký chlapec. Predáva po uliciach Káhiry hygienické vreckovky turistom v kontraste so svojim ufúľaným vzhľadom. Pravdepodobne je sirota...Dostane zopár drobných, čo priláka ďalšie deti, ktoré žobrú. Porovnávajú si, kto koľko utŕžil a už trielia k ďalšiemu autobusu plnom turistov. A toto všetko absolvujú denne s jediným balíčkom vreckoviek, veď kto by už mal srdce im ho zobrať... Learn how to maintain your emotional balance when strangers start attacking you online.</p>
+      <h3>Barikáda dejín</h3>
+      <p>Návšteva Egyptského národného múzea  v Káhire je obrovský zážitok z dvoch dôvodov. História je hmatateľná a neuveriteľná tak isto, ako zátarasy, tanky, všadeprítomní vojaci a ostnatý drôt , ktorý je okolo múzea. Egyptský národ a Islamskí bratia sú v antagonistickom vzťahu. Bohužiaľ ešte nepochopili, že sú vlastne všetci egyptskí islamskí bratia. A tak sa náš šofér snaží nás  „bezpečne“ naložiť do svojho „nebezpečného“ minibusu a uháňať ďalej. Uháňať myslím doslova.... </p>
     </article>
   </section>
 
   <section>
     <figure>
-      <img src="https://images.pexels.com/photos/944743/pexels-photo-944743.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+      <img src="img-kyanotypia/funguje.jpg">
     </figure>
     <article>
-      <span>Social Media</span>
-      <h3>Keeping cool when you’re under attack</h3>
-      <p>Čiernooký chlapec. Predáva po uliciach Káhiry hygienické vreckovky turistom v kontraste so svojim ufúľaným vzhľadom. Pravdepodobne je sirota...Dostane zopár drobných, čo priláka ďalšie deti, ktoré žobrú. Porovnávajú si, kto koľko utŕžil a už trielia k ďalšiemu autobusu plnom turistov. A toto všetko absolvujú denne s jediným balíčkom vreckoviek, veď kto by už mal srdce im ho zobrať... Learn how to maintain your emotional balance when strangers start attacking you online.</p>
+      <h3>Funguje!</h3>
+      <p>Keď človek prechádza odľahlými štvrťami Káhiry tak v bočných uličkách narazí na kopec "servisov", sú to domáce dielne. Ľudia častokrát bývajú priamo alebo popri budove ,ba skôr v prístrešku ,kde opravujú autá, motorky. Bežne som zažil pohľad na ulicu ,kde bolo pristavených na krajnici aspoň päť áut a každé malo otvorenú kapotu a niekoho, kto je v nej pichnutý do pol pása. Celkovo to malo veľmi priateľskú atmosféru, aspoň pri servisoch čo som prechádzal ,človek počul smiech pokriky a aj asi nadávky ,keď sa nedarilo. Mne sa zrovna podarilo zachytiť moment, keď niekto rozbehol motorku, ktorú opravovali a jeden z majstrov niečo na nás s úsmevom kričal :“Funguje!"</p>
     </article>
   </section>
 
   <section>
     <figure>
-      <img src="https://images.pexels.com/photos/821653/pexels-photo-821653.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+      <img src="img-kyanotypia/nacestach.jpg">
     </figure>
     <article>
-      <span>Photography</span>
-      <h3>Shooting pictures like professionals</h3>
-      <p>Exposure,Keď človek prechádza odľahlými štvrťami Káhiry tak v bočných uličkách narazí na kopec "servisov", sú to domáce dielne. Ľudia častokrát bývajú priamo alebo popri budove ,ba skôr v prístrešku ,kde opravujú autá, motorky. Bežne som zažil pohľad na ulicu ,kde bolo pristavených na krajnici aspoň päť áut a každé malo otvorenú kapotu a niekoho, kto je v nej pichnutý do pol pása. Celkovo to malo veľmi priateľskú atmosféru, aspoň pri servisoch čo som prechádzal ,človek počul smiech pokriky a aj asi nadávky ,keď sa nedarilo. Mne sa zrovna podarilo zachytiť moment, keď niekto rozbehol motorku, ktorú opravovali a jeden z majstrov niečo na nás s úsmevom kričal :“Funguje!" rule of thirds, ISO: what do you really need to become a professional photographer?</p>
-    </article>
-  </section>
-
-  <section>
-    <figure>
-      <img src="https://images.pexels.com/photos/1391421/pexels-photo-1391421.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
-    </figure>
-    <article>
-      <span>Travel</span>
-      <h3>Top 5 beaches to visit next holiday</h3>
-      <p>Obchodovanie majú arabské národy v krvi. O tom som sa presvedčil nespočetnekrát. Je to rituál tisíc rokov starý, ktorý sa zdokonaľoval, brúsil a vylepšoval v danej dobe. Výkriky, gestikulácia, hnev, ktorý sa v okamihu mení na široký úsmev spokojnosti. Keď nechceš uraziť ich obchodné umenie, nesmieš súhlasiť hneď s navrhovanou cenou...Treba vyjednávať, handrkovať sa a čím dlhšie tento tanec slov trvá, tým je obchodník spokojnejší. Jeho umenie je divadlo, ktoré nemôže skončiť prvým dejstvom...Time to change your destination and find out paradises to spend your next holiday.</p>
-    </article>
-  </section>
-
-  <section>
-    <figure>
-      <img src="https://images.pexels.com/photos/1115804/pexels-photo-1115804.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
-    </figure>
-    <article>
-      <span>Architecture</span>
-      <h3>Modern architecture and its influence</h3>
+      <h3>Na Cestách</h3>
       <p>Stále veľké percento ľudí používa ako dopravný prostriedok buď osla, ťavu alebo motorku. Motorkárov v Káhire je dosť veľa vzhľadom na hustotu obyvateľstva a terén. Takže tie vtipné fotky ,čo vidíte na internete, že človek ide s kozou na motorke,  je tu realita a na dennom poriadku. V bočných uličkách bežne takto posedávali ľudia na obrubníkoch, či už s motorkou alebo bez, a pili čaj. Toto je veľmi charakteristický záber "rutinného" života tu.
-You probably don’t know how important this movement is for our generation.</p>
+    </p>
     </article>
   </section>
 
   <section>
     <figure>
-      <img src="https://images.pexels.com/photos/1142984/pexels-photo-1142984.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+      <img src="img-kyanotypia/obchod.jpg">
     </figure>
     <article>
-      <span>Travel</span>
-      <h3>Your unforgettable travels around the world</h3>
-      <p>Starší dáva pozor na mladších, či už je to  súrodenec alebo sused.  Asi v tomto duchu som videl  flákať sa deti po odľahlejších častiach Káhiry. Mesto, kde nájdeš sa hrať deti asi kdekoľvek. Bežne človek žasol, s akou vynaliezavosťou si decká dokázali zhotoviť rôzne hračky z odpadu. Boli to zaujímavé pohľady na zamyslenie, keď človek videl partie mladých ľudí pri bežných hrách alebo športoch, ktoré sa hrali na smetiskách, ruinách a medzi tým vám prebleskli v hlave zábery tých nových ihrísk, čo nájdete aj u nás doma, ktoré väčšinou čo raz viac zívajú prázdnotou. Bol to jeden z podstatných kontrastov v rámci sociálneho života na ulici.
-Get ready to spend days with intense happiness and adventure alongside friends and family.</p>
+      <h3>Obchod</h3>
+      <p>Obchodovanie majú arabské národy v krvi. O tom som sa presvedčil nespočetnekrát. Je to rituál tisíc rokov starý, ktorý sa zdokonaľoval, brúsil a vylepšoval v danej dobe. Výkriky, gestikulácia, hnev, ktorý sa v okamihu mení na široký úsmev spokojnosti. Keď nechceš uraziť ich obchodné umenie, nesmieš súhlasiť hneď s navrhovanou cenou...Treba vyjednávať, handrkovať sa a čím dlhšie tento tanec slov trvá, tým je obchodník spokojnejší. Jeho umenie je divadlo, ktoré nemôže skončiť prvým dejstvom...</p>
     </article>
   </section>
 
   <section>
     <figure>
-      <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Free Stock Photo from pexels.com">
+      <img src="img-kyanotypia/ona.jpg">
     </figure>
     <article>
-      <span>Design</span>
-      <h3>Improve your design skills with Gestalt Principles</h3>
-      <p>Stáva na tom istom mieste každý deň. Na zastávke pre turistov, ktorí to majú namierené do Káhiry .Nič nehovorí, neprosí, len vyhľadáva očný kontakt s turistami, občas sa dotkne závoja, kde tušiť ústa. Jedlo. Hlad. Chce jedlo. A tak beriem svoj „all inclusive“ balíček a podávam jej ho. Rýchlo ho skryje do veľkej kapsy na somárovi. Niektorí turisti sa pridávajú... Dievča nechce peniaze, ale jej oči prosia o kúsok jedla, na ktoré čaká jej početná rodina....a somár. Ženy v Egypte sú vo všeobecnosti veľmi utláčané a Káhira si celkom dlho už drzí prvenstvo ako najnebezpečnejšie mesto pre ženy. Napríklad najväčším problémom žien v Egypte sú postoje k sexuálnemu obťažovaniu. Rovnako ako v iných mestách, aj v Káhire ženy obviňujú, že za obťažovanie môžu ony samy, napríklad smiechom na verejnosti alebo oblečením. Takéto predstavy vštepujú už od malička chlapcom aj dievčatám v krajine.Proximity, redundance, contrast: what does these words really means when designing?</p>
+      <h3>Ona</h3>
+      <p>Stáva na tom istom mieste každý deň. Na zastávke pre turistov, ktorí to majú namierené do Káhiry .Nič nehovorí, neprosí, len vyhľadáva očný kontakt s turistami, občas sa dotkne závoja, kde tušiť ústa. Jedlo. Hlad. Chce jedlo. A tak beriem svoj „all inclusive“ balíček a podávam jej ho. Rýchlo ho skryje do veľkej kapsy na somárovi. Niektorí turisti sa pridávajú... Dievča nechce peniaze, ale jej oči prosia o kúsok jedla, na ktoré čaká jej početná rodina....a somár. Ženy v Egypte sú vo všeobecnosti veľmi utláčané a Káhira si celkom dlho už drzí prvenstvo ako najnebezpečnejšie mesto pre ženy. Napríklad najväčším problémom žien v Egypte sú postoje k sexuálnemu obťažovaniu. Rovnako ako v iných mestách, aj v Káhire ženy obviňujú, že za obťažovanie môžu ony samy, napríklad smiechom na verejnosti alebo oblečením. Takéto predstavy vštepujú už od malička chlapcom aj dievčatám v krajine.</p>
+    </article>
+  </section>
+
+  <section>
+    <figure>
+      <img src="img-kyanotypia/partia.jpg">
+    </figure>
+    <article>
+      <h3>Partia</h3>
+      <p>Starší dáva pozor na mladších, či už je to  súrodenec alebo sused.  Asi v tomto duchu som videl  flákať sa deti po odľahlejších častiach Káhiry. Mesto, kde nájdeš sa hrať deti asi kdekoľvek. Bežne človek žasol, s akou vynaliezavosťou si decká dokázali zhotoviť rôzne hračky z odpadu. Boli to zaujímavé pohľady na zamyslenie, keď človek videl partie mladých ľudí pri bežných hrách alebo športoch, ktoré sa hrali na smetiskách, ruinách a medzi tým vám prebleskli v hlave zábery tých nových ihrísk, čo nájdete aj u nás doma, ktoré väčšinou čo raz viac zívajú prázdnotou. Bol to jeden z podstatných kontrastov v rámci sociálneho života na ulici.</p>
+    </article>
+  </section>
+
+  <section>
+    <figure>
+      <img src="img-kyanotypia/nejasnabuducnost.jpg">
+    </figure>
+    <article>
+
+      <h3>„Ali“</h3>
+      <p>Čiernooký chlapec. Predáva po uliciach Káhiry hygienické vreckovky turistom v kontraste so svojim ufúľaným vzhľadom. Pravdepodobne je sirota...Dostane zopár drobných, čo priláka ďalšie deti, ktoré žobrú. Porovnávajú si, kto koľko utŕžil a už trielia k ďalšiemu autobusu plnom turistov. A toto všetko absolvujú denne s jediným balíčkom vreckoviek, veď kto by už mal srdce im ho zobrať... </p>
     </article>
   </section>
 </main>
