--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -41,17 +41,17 @@
 
        <section>
         <article>
-
           <img class="foto-technologia"  src="img-kyanotypia/zvecsovak.jpg"100% width="100%"alt="">
           <h3>Zväčšovák</h3>
         </section>
-       <section>
+       <section2>
 
         <article>
           <h3>Technológia</h3>
-          <p>Kyanotypia je známa už od roku 1842 keď ju vynašiel John Herschel. Bežný postup je, že nanesiete jemný film roztoku (Citran železitoamonný a Hexakyanoželezitan draselný) na papier alebo iný savý povrch a presvietite negatív, ktorý máte na transparentnej fólii. Veľkosť papiera je rovnaká ako veľkosť negatívu. Bežne sa to rieši spôsobom, že si dáte negatív vytlačiť na fóliu formátu A4. V roku 2015 skupina profesionálnych fotografov Branco Ottico vo Florencii sa pokúsili prelomiť rekord tým, že zlepili veľa menších fólii s negatívom a vytvorili jeden veľký, ktorý mal 24 m2, a podľa neho vytvorili pozitív, ktorý exponovali denným svetlom. Tento postup bol určite dosť nákladný a pre mňa nebolo reálne vytvárať tak veľkú fóliu. Ďalšia nevýhoda bola, že mala na sebe aj deliace spoje. Preto som začal experimentovať s optickou sústavou a nakoniec sa mi podarilo vyrobiť si vlastný zväčšovací pristroj "zväčšovák" , ktorý je určený presne iba na kyanotypiu a zväčovanie na veľký formát rádovo v metroch. Taktiež som optimalizoval nanášanie jemného filmu chémie na textil zhruba 1deci na 2 metre štvorcové. Oproti Branco Ottico, ktorý textil kompletne namáčal v niekoľko litrovej emulzii.</p>
+          <p class="text-technologia" >Kyanotypia je známa už od roku 1842 keď ju vynašiel John Herschel. Bežný postup je, že nanesiete jemný film roztoku (Citran železitoamonný a Hexakyanoželezitan draselný) na papier alebo iný savý povrch a presvietite negatív, ktorý máte na transparentnej fólii. Veľkosť papiera je rovnaká ako veľkosť negatívu. Bežne sa to rieši spôsobom, že si dáte negatív vytlačiť na fóliu formátu A4. V roku 2015 skupina profesionálnych fotografov Branco Ottico vo Florencii sa pokúsili prelomiť rekord tým, že zlepili veľa menších fólii s negatívom a vytvorili jeden veľký, ktorý mal 24 m2, a podľa neho vytvorili pozitív, ktorý exponovali denným svetlom. Tento postup bol určite dosť nákladný a pre mňa nebolo reálne vytvárať tak veľkú fóliu. Ďalšia nevýhoda bola, že mala na sebe aj deliace spoje. Preto som začal experimentovať s optickou sústavou a nakoniec sa mi podarilo vyrobiť si vlastný zväčšovací pristroj "zväčšovák" , ktorý je určený presne iba na kyanotypiu a zväčovanie na veľký formát rádovo v metroch. Taktiež som optimalizoval nanášanie jemného filmu chémie na textil zhruba 1deci na 2 metre štvorcové. Oproti Branco Ottico, ktorý textil kompletne namáčal v niekoľko litrovej emulzii.</p>
         </article>
-      </section>
+        </article>
+      </section2>
   </main2>
 
 
@@ -145,6 +145,30 @@
 </main>
 
 
+
+
+  <!-- Site            FOOTER             footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>O projekte</h6>
+            <p class="text-justify">Z﻿lomový moment bol uvedomenie si potenciálu technológie <br> so spojením dalsiej technológie v kombinácii ktorú ešte nikto neurobil.
+C﻿ele to vústilo v originálny projekt a nový výrobný postup ktorý by sa v budúcnosti mohol stat službou pre alternatívnu veľkoplošnú fotografiu.</p>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Výstavy </h6>
+            <ul class="footer-links">
+              <li><a href="https://www.hradbysamoty.org">Hradby Samoty</a></li>
+              <li><a href="https://www.malyberlin.sk/">Malý Berlín</a></li>
+              <li><a href="https://novacvernovka.eu/program">Nová Cvernovka</a></li>
+            </ul>
+
+
+        </div>
+      </div>
+</footer>
 
 
 
