--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -153,8 +153,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-6">
             <h6>O projekte</h6>
-            <p class="text-justify">Z﻿lomový moment bol uvedomenie si potenciálu technológie <br> so spojením dalsiej technológie v kombinácii ktorú ešte nikto neurobil.
-C﻿ele to vústilo v originálny projekt a nový výrobný postup ktorý by sa v budúcnosti mohol stat službou pre alternatívnu veľkoplošnú fotografiu.</p>
+            <p class="text-justify">Z﻿lomový moment bol uvedomenie si potenciálu technológie <br> so spojením ďalšej technológie v kombinácii ktorú ešte nikto neurobil.
+C﻿ele to vústilo v originálny projekt a nový výrobný postup ktorý by sa v budúcnosti mohol stať službou pre alternatívnu veľkoplošnú fotografiu.</p>
           </div>
 
           <div class="col-xs-6 col-md-3">
