--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -7,9 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="style-kyanotypia.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono" >
 
+
 </head>
 
 <body>
+<div class="cursor"></div>
+
+<!-- cursor script nalinkovanie -->
+  <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js'></script><script  src="./script-kyanotypia-cursor.js"></script>
 
 
 <div>
@@ -21,6 +26,7 @@
       <a  class="podnapdpis" >Egypt-Kahira 2014</a>
     </div>
 </div>
+
 
 
 
@@ -143,6 +149,8 @@
     </article>
   </section>
 </main>
+
+
 
 
 
