--- a/kyanotypia.html
+++ b/kyanotypia.html
@@ -38,6 +38,7 @@
    <img class="foto"  src="img-kyanotypia/MBbuducnostnejasna.jpg"100% width="100%"alt="">
    <img class="foto"  src="img-kyanotypia/MBdoneznama.jpg"100% width="100%"alt="">
    <img class="foto"  src="img-kyanotypia/MBpartia.jpg"100% width="100%"alt="">
+    <img class="foto"  src="img-kyanotypia/hradby moravany 2019.jpg"100% width="100%"alt="">
 </div>
 
 
@@ -50,18 +51,34 @@
           <img class="foto-technologia"  src="img-kyanotypia/zvecsovak.jpg"100% width="100%"alt="">
           <h3>Zväčšovák</h3>
         </section>
-       <section2>
 
+          <section>
+        <article>
+          <img class="foto-technologia"  src="img-kyanotypia/zvecovak vnutro nadvorie 2020.jpg"100% width="100%"alt="">
+          <h3>Zväčšovák z vnútra </h3>
+        </section>
+
+
+  </main2>
+
+
+<main2>
+     <section>
+        <article>
+          <img class="foto-technologia"  src="img-kyanotypia/striekanie pistol.jpg"100% width="100%"alt="">
+          <h3>Nanášanie emulzie</h3>
+        </section>
+
+       <section2>
         <article>
           <h3>Technológia</h3>
           <p class="text-technologia" >Kyanotypia je známa už od roku 1842 keď ju vynašiel John Herschel. Bežný postup je, že nanesiete jemný film roztoku (Citran železitoamonný a Hexakyanoželezitan draselný) na papier alebo iný savý povrch a presvietite negatív, ktorý máte na transparentnej fólii. Veľkosť papiera je rovnaká ako veľkosť negatívu. Bežne sa to rieši spôsobom, že si dáte negatív vytlačiť na fóliu formátu A4. V roku 2015 skupina profesionálnych fotografov Branco Ottico vo Florencii sa pokúsili prelomiť rekord tým, že zlepili veľa menších fólii s negatívom a vytvorili jeden veľký, ktorý mal 24 m2, a podľa neho vytvorili pozitív, ktorý exponovali denným svetlom. Tento postup bol určite dosť nákladný a pre mňa nebolo reálne vytvárať tak veľkú fóliu. Ďalšia nevýhoda bola, že mala na sebe aj deliace spoje. Preto som začal experimentovať s optickou sústavou a nakoniec sa mi podarilo vyrobiť si vlastný zväčšovací pristroj "zväčšovák" , ktorý je určený presne iba na kyanotypiu a zväčovanie na veľký formát rádovo v metroch. Taktiež som optimalizoval nanášanie jemného filmu chémie na textil zhruba 1deci na 2 metre štvorcové. Oproti Branco Ottico, ktorý textil kompletne namáčal v niekoľko litrovej emulzii.</p>
         </article>
         </article>
       </section2>
-  </main2>
 
 
-
+   </main2>
 
 
 <main>
@@ -168,9 +185,9 @@ C﻿ele to vústilo v originálny projekt a nový výrobný postup ktorý by sa 
           <div class="col-xs-6 col-md-3">
             <h6>Výstavy </h6>
             <ul class="footer-links">
-              <li><a href="https://www.hradbysamoty.org">Hradby Samoty</a></li>
-              <li><a href="https://www.malyberlin.sk/">Malý Berlín</a></li>
-              <li><a href="https://novacvernovka.eu/program">Nová Cvernovka</a></li>
+              <li><a href="https://novacvernovka.eu/program">2019 Nová Cvernovka</a></li>
+              <li><a href="https://www.hradbysamoty.org">2019 Hradby Samoty</a></li>
+              <li><a href="https://www.malyberlin.sk/">2020 Malý Berlín</a></li>
             </ul>
 
 
