--- a/2021-Mapping-Pohoda-on-the-Ground/index-2021-Mapping-Pohoda-on-the-Ground.html
+++ b/2021-Mapping-Pohoda-on-the-Ground/index-2021-Mapping-Pohoda-on-the-Ground.html
@@ -52,7 +52,7 @@
           <p class="text-technologia">           
         
         V roku 2021 som nadviazal spoluprácu s <a style="color:whitesmoke;" href="https://emalancaricova.com/">Emou Lančaričovou</a>, odborníčkou na fotografickú tvorbu. Cieľom projektu bolo vytvoriť monumentálny objekt, ktorý bol nainštalovaný na pódiu festivalu Pohoda on the Ground. Výsledkom bol zaujímavý projekt, v rámci, ktorého sa podarilo vytvoriť veľký čierny kváder, ktorí bol nainštalovaný priamo na pódium, kde vystupovali hudobné formácie. Mojou úlohou bolo namapovať a následne projektovať na povrch kvádra. Výsledkom bol VJ performance, ktorý sa premietal počas vystúpení na festivale. Technologickou výzvou bolo projektovať na čierny povrch kvádra, čo sa nám podarilo vyriešiť a výsledkom bolo vyvrátenie určitého oximoru, 
-        keďže čierna farba neodráža svetlo. Na internete určite nájdete aj veĺa <a style="color:whitesmoke;" href="https://www.youtube.com/watch?v=fWurA8BLe8Y&ab_channel=PohodaFestival">záznamov</a> z festilavu.
+        keďže čierna farba neodráža svetlo. Na internete určite nájdete aj veľa <a style="color:whitesmoke;" href="https://www.youtube.com/watch?v=fWurA8BLe8Y&ab_channel=PohodaFestival">záznamov</a> z festilavu.
         </p>
         </article>
         </article>
