--- a/sklad.html
+++ b/sklad.html
@@ -1,31 +1,127 @@
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2053092/widgets/677116"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2162759/widgets/677194"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2162885/widgets/677196"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2162886/widgets/677868"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ThingSpeak Stream</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        /* Your custom CSS styles can be added here */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .intro-bar {
+            width: 100%;
+            background-color: #007bff;
+            color: white;
+            padding: 10px;
+            text-align: left;
+            padding-left: 30px;
 
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206135/widgets/677222"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206137/widgets/677226"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206138/widgets/677984"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206140/widgets/677985"></iframe>
+        }
+        .donut-chart-container {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            margin: 20px;
+        }
+        .chart-text {
+            position: absolute;
+            top: 63%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+        canvas {
+            width: 100% !important;
+            height: 100% !important;
+        }
+    </style>
+</head>
+<body>
 
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206443/widgets/677992"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206444/widgets/677993"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206445/widgets/677994"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206446/widgets/677995"></iframe>
+<!-- Introduction Bar -->
+<div class="intro-bar">
+    <h1>Samko Vahy</h1>
+   
+</div>
 
+<!-- Container for Donut Charts -->
+<div class="donut-chart-container" id="donutChartContainer1">
+    <canvas class="donut-chart" id="donutChart1"></canvas>
+    <div class="chart-text" id="chartText1">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer2">
+    <canvas class="donut-chart" id="donutChart2"></canvas>
+    <div class="chart-text" id="chartText2">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer3">
+    <canvas class="donut-chart" id="donutChart3"></canvas>
+    <div class="chart-text" id="chartText3">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer4">
+    <canvas class="donut-chart" id="donutChart4"></canvas>
+    <div class="chart-text" id="chartText4">Loading...</div>
+</div>
 
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2053092/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2162759/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2162885/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2162886/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+<script>
+    // Function to update donut chart with fetched variable value
+    function updateDonutChart(chartId, value, segmentLabel) {
+        var remainingValue = 100 - value;
 
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206135/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206137/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206138/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206140/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+        var donutChart = new Chart(chartId, {
+            type: 'doughnut',
+            data: {
+                labels: [segmentLabel, 'Voľné miesto'],
+                datasets: [{
+                    data: [value, remainingValue],
+                    backgroundColor: ['#007bff', '#f3f3f3'],
+                    borderWidth: 0
+                }]
+            },
+            options: {
+                cutoutPercentage: 70,
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    enabled: false
+                }
+            }
+        });
+    }
 
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206443/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206444/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206445/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
-<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2206446/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+    // Function to fetch variable value and update donut chart
+    function updateVariableAndChart(channelId, fieldId, chartId, textId, segmentLabel, apiKey) {
+        var url = 'https://api.thingspeak.com/channels/' + channelId + '/fields/' + fieldId + '/last.json?api_key=' + apiKey;
 
+        fetch(url)
+            .then(response => response.json())
+            .then(data => {
+                var variableValue = parseFloat(data.field1); // Parse fetched value as float
+                updateDonutChart(chartId, variableValue, segmentLabel);
+                document.getElementById(textId).innerText = variableValue.toFixed(2); // Update text
+            })
+            .catch(error => console.error('Error fetching value:', error));
+    }
+
+    // Update charts periodically
+    setInterval(function() {
+        updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'H260', 'AT9OT4NG12NIBLFN');
+        updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'H220', '8S9EU2PT99T2PJFP');
+        updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
+        updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
+    }, 5000);
+
+    // Initial update
+    updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'H260', 'AT9OT4NG12NIBLFN');
+    updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'H220', '8S9EU2PT99T2PJFP');
+    updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
+    updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
+</script>
+
+</body>
+</html>
