--- a/sklad.html
+++ b/sklad.html
@@ -17,10 +17,10 @@
             width: 100%;
             background-color: #007bff;
             color: white;
-            padding: 10px;
+            padding: 1px;
             text-align: left;
+            font-size: 10px;
             padding-left: 30px;
-
         }
         .donut-chart-container {
             position: relative;
@@ -46,7 +46,6 @@
 <!-- Introduction Bar -->
 <div class="intro-bar">
     <h1>Samko Vahy</h1>
-   
 </div>
 
 <!-- Container for Donut Charts -->
@@ -66,6 +65,42 @@
     <canvas class="donut-chart" id="donutChart4"></canvas>
     <div class="chart-text" id="chartText4">Loading...</div>
 </div>
+
+<!-- Additional Donut Chart Containers -->
+<div class="donut-chart-container" id="donutChartContainer5">
+    <canvas class="donut-chart" id="donutChart5"></canvas>
+    <div class="chart-text" id="chartText5">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer6">
+    <canvas class="donut-chart" id="donutChart6"></canvas>
+    <div class="chart-text" id="chartText6">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer7">
+    <canvas class="donut-chart" id="donutChart7"></canvas>
+    <div class="chart-text" id="chartText7">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer8">
+    <canvas class="donut-chart" id="donutChart8"></canvas>
+    <div class="chart-text" id="chartText8">Loading...</div>
+</div>
+<!-- Additional Donut Chart Containers -->
+<div class="donut-chart-container" id="donutChartContainer9">
+    <canvas class="donut-chart" id="donutChart9"></canvas>
+    <div class="chart-text" id="chartText9">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer10">
+    <canvas class="donut-chart" id="donutChart10"></canvas>
+    <div class="chart-text" id="chartText10">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer11">
+    <canvas class="donut-chart" id="donutChart11"></canvas>
+    <div class="chart-text" id="chartText11">Loading...</div>
+</div>
+<div class="donut-chart-container" id="donutChartContainer12">
+    <canvas class="donut-chart" id="donutChart12"></canvas>
+    <div class="chart-text" id="chartText12">Loading...</div>
+</div>
+
 
 <script>
     // Function to update donut chart with fetched variable value
@@ -114,6 +149,14 @@
         updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'H220', '8S9EU2PT99T2PJFP');
         updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
         updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
+        updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'new', 'FGA035R07TYK3ZAK');
+        updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'new', 'Y0IK5643ZNQNIMSM');
+        updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'new', 'ED9NU29L3NW8JEN');
+        updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'new', 'P8FVKVM2EPSGYH1A');
+        updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'LABEL', 'L0IY5SXJIZMG1U9N');
+        updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'LABEL', '4YT6NKGJYI1SWWC3');
+        updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'LABEL', 'RZCZD5ABR3KMYKCW');
+        updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'LABEL', 'YSVRD66SVLCNVAOI');
     }, 5000);
 
     // Initial update
@@ -121,6 +164,14 @@
     updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'H220', '8S9EU2PT99T2PJFP');
     updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
     updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
+    updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'new', 'FGA035R07TYK3ZAK');
+    updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'new', 'Y0IK5643ZNQNIMSM');
+    updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'new', 'ED9NU29L3NW8JEN');
+    updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'new', 'P8FVKVM2EPSGYH1A');
+    updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'LABEL', 'L0IY5SXJIZMG1U9N');
+    updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'LABEL', '4YT6NKGJYI1SWWC3');
+    updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'LABEL', 'RZCZD5ABR3KMYKCW');
+    updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'LABEL', 'YSVRD66SVLCNVAOI');
 </script>
 
 </body>
