--- a/sklad.html
+++ b/sklad.html
@@ -8,12 +8,14 @@
     <style>
         /* Your custom CSS styles can be added here */
         body {
+            margin: 0px;
             font-family: Arial, sans-serif;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
         }
         .intro-bar {
+            margin: 0px;
             width: 100%;
             background-color: #007bff;
             color: white;
@@ -149,23 +151,25 @@
         updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'H220', '8S9EU2PT99T2PJFP');
         updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
         updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
+
         updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'new', 'FGA035R07TYK3ZAK');
-        updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'new', 'Y0IK5643ZNQNIMSM');
+        updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'samo testuje', 'Y0IK5643ZNQNIMSM');
         updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'new', 'ED9NU29L3NW8JEN');
         updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'new', 'P8FVKVM2EPSGYH1A');
         updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'LABEL', 'L0IY5SXJIZMG1U9N');
         updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'LABEL', '4YT6NKGJYI1SWWC3');
         updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'LABEL', 'RZCZD5ABR3KMYKCW');
         updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'LABEL', 'YSVRD66SVLCNVAOI');
-    }, 5000);
+    }, 3000);
 
     // Initial update
     updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'H260', 'AT9OT4NG12NIBLFN');
     updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'H220', '8S9EU2PT99T2PJFP');
     updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
     updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
+
     updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'new', 'FGA035R07TYK3ZAK');
-    updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'new', 'Y0IK5643ZNQNIMSM');
+    updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'samo testuje', 'Y0IK5643ZNQNIMSM');
     updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'new', 'ED9NU29L3NW8JEN');
     updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'new', 'P8FVKVM2EPSGYH1A');
     updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'LABEL', 'L0IY5SXJIZMG1U9N');
