--- a/sklad.html
+++ b/sklad.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TarPad</title>
+      <title>Feather</title>
+  <link rel="icon" type="image/x-icon" href="file://D:/Vaha%202024/Vaha%202024/16.01.2024/dizajn%20identita/tab.icon.svg">
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* Your custom CSS styles can be added here */
@@ -62,13 +64,18 @@
             width: 100% !important;
             height: 100% !important;
         }
-    </style>
+    </style>    
 </head>
 <body>
 
-<!-- Introduction Bar -->
+
+<!-- Úvodná Lišta -->
 <div class="intro-bar">
-    <h1>TarPad</h1>
+    <!-- SVG Logo -->
+    <svg width="100" height="50" xmlns="http://www.w3.org/2000/svg">
+        <!-- Nahraďte hodnotu atribútu href elementu image skutočnou cestou k vášmu SVG súboru -->
+        <image xlink:href="logo_white.svg" width="100" height="50"/>       
+    </svg>
 </div>
 
 <!-- Container for Donut Charts -->
