--- a/sklad.html
+++ b/sklad.html
@@ -111,7 +111,7 @@
         <!-- SVG Logo -->
     <svg width="100" height="50" xmlns="http://www.w3.org/2000/svg">
         <!-- Nahraďte hodnotu atribútu href elementu image skutočnou cestou k vášmu SVG súboru -->
-        <image xlink:href="file://D:/Vaha%202024/Vaha%202024/16.01.2024/dizajn%20identita/logo_white.svg" width="100" height="50"/>       
+        <image xlink:href="Samayel/tab_icon.svg" width="100" height="50"/>       
     </svg>
 
        <!-- Button Container -->
