--- a/sklad.html
+++ b/sklad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Feather</title>
-  <link rel="icon" type="image/x-icon" href="file://D:/Vaha%202024/Vaha%202024/16.01.2024/dizajn%20identita/tab.icon.svg">
+  <link rel="icon" type="image/x-icon" href="tab.icon.svg">
   
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
