--- a/sklad.sigi/index.sklad.sigi.html
+++ b/sklad.sigi/index.sklad.sigi.html
@@ -116,8 +116,8 @@
 
        <!-- Button Container -->
     <div class="button-container">
-        <button onclick="window.location.href='https://www.google.sk/?hl=sk'">firmware</button>
-        <button onclick="window.location.href='https://www.google.sk/?hl=sk'">manual for use</button>
+        <button onclick="window.location.href='https://samayel.com/sklad.sigi/img.firmware.update/index-firmware-update.html'">firmware</button>
+        <button onclick="window.location.href='https://samayel.com/sklad.sigi/img.device.manual/index-device-manual.html'">manual for use</button>
    
 
 
