--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -59,11 +59,11 @@
 
 <div class="container">
   <div class="step">
-    <img src="Samayel/sklad.sigi/img.device.manual/device.jpg" alt="Step 1">
+    <img src="sklad.sigi/img.device.manual/device.jpg" alt="Step 1">
     <p>Step 1: Holding buttons for 5 seconds..</p>
   </div>
   <div class="step">
-    <img src="samayel/sklad.sigi/img.device.manual/AP_push.jpg" alt="Step 2">
+    <img src="img.device.manual/AP_push.jpg" alt="Step 2">
     <p>Step 2</p>
   </div>
     <div class="step">
