--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -71,7 +71,7 @@
     <p>Step 3: Now is device AP mode. Follow the IP address according to the display.</p>
   </div>
       <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/device_manual/AP1.png" alt="Step 4">
+    <img src="AP1.png" alt="Step 4">
     <p>Step 4: Connect your computer or mobile on device.</p>  <p> Name:Vaha_AP  </p>   <p> Pass:12345678 </p>
   </div>
       <div class="step">
