--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -63,11 +63,11 @@
     <p>Step 1: Holding buttons for 5 seconds..</p>
   </div>
   <div class="step">
-    <img src="img.device.manual/AP_push.jpg" alt="Step 2">
+    <img src="AP_push.jpg" alt="Step 2">
     <p>Step 2</p>
   </div>
     <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/device_manual/AP_point.jpg" alt="Step 3">
+    <img src="AP_point.jpg" alt="Step 3">
     <p>Step 3: Now is device AP mode. Follow the IP address according to the display.</p>
   </div>
       <div class="step">
@@ -75,16 +75,16 @@
     <p>Step 4: Connect your computer or mobile on device.</p>  <p> Name:Vaha_AP  </p>   <p> Pass:12345678 </p>
   </div>
       <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/device_manual/AP2.png" alt="Step 5">
+    <img src="AP2.png" alt="Step 5">
     <p>Step 5: Connect your network and API Key. the interval should not be less than 60 second </p>
   </div>
        <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/device_manual/AP3.png" alt="Step 6">
+    <img src="AP3.png" alt="Step 6">
     <p>Step 6: Connect is successful. Now device automatic disconnection of your computer/mobile. </p>
   </div>
    </div>
        <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/device_manual/device.jpg" alt="Step 7">
+    <img src="device.jpg" alt="Step 7">
     <p>Step 6: For Tare weight Press buttons max 1-2 seconds. </p>
   </div>
 
