--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -59,7 +59,7 @@
 
 <div class="container">
   <div class="step">
-    <img src="sklad.sigi/img.device.manual/device.jpg" alt="Step 1">
+    <img src="device.jpg" alt="Step 1">
     <p>Step 1: Holding buttons for 5 seconds..</p>
   </div>
   <div class="step">
