--- a/sklad.sigi/img.firmware.update/index-firmware-update.html
+++ b/sklad.sigi/img.firmware.update/index-firmware-update.html
@@ -65,19 +65,19 @@
 
 <div class="container">
   <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/img_firmware_update/download_tool.png" alt="Step 1">
+    <img src="download_tool.png" alt="Step 1">
     <p>Step 1: Download Flash tool from page.</p>
   </div>
   <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/img_firmware_update/Flesh1.png" alt="Step 2">
+    <img src="Flesh1.png" alt="Step 2">
     <p>Step 2: Select ESP8266 and Develop mode.</p>
   </div>
     <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/img_firmware_update/spravca uloh.png" alt="Step 3">
+    <img src="spravca uloh.png" alt="Step 3">
     <p>Step 3: Open device manager. The port number may vary!</p>
   </div>
   <div class="step">
-    <img src="file:///C:/Users/Online/Desktop/img_firmware_update/Flesh2.png" alt="Step 3">
+    <img src="Flesh2.png" alt="Step 3">
     <p>Step 4: Select bin file and set according to the picture. Choose the COM port according to your computer settings. Press start.</p>
   </div>
 </div>
