--- a/sklad.sigi/img.firmware.update/index-firmware-update.html
+++ b/sklad.sigi/img.firmware.update/index-firmware-update.html
@@ -60,7 +60,7 @@
 
 <div class="top-bar">
   <button onclick="window.location.href='https://www.espressif.com/en/support/download/other-tools';" class="download-button">Flesh tool</button>
-  <button class="download-button" onclick="window.location.href='release27.03.bin';">Download firmware 27.03.2024 </button>
+  <button class="download-button" onclick="window.location.href='firmware.bin';">Download firmware 28.03.2024 </button>
 </div>
 
 <div class="container">
