--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -72,7 +72,7 @@
   </div>
       <div class="step">
     <img src="AP1.png" alt="Step 4">
-    <p>Step 4: Connect your computer or mobile on device.</p>  <p> Name:Vaha_AP  </p>   <p> Pass:12345678 </p>
+    <p>Step 4: Connect your computer or mobile on device.</p>  <p> Name:Weight_ioT  </p>   <p> Pass:12345678 </p>
   </div>
       <div class="step">
     <img src="AP2.png" alt="Step 5">
