--- a/sklad.sigi/index.sklad.sigi.html
+++ b/sklad.sigi/index.sklad.sigi.html
@@ -226,7 +226,7 @@
                 labels: [segmentLabel, 'Voľné miesto'],
                 datasets: [{
                     data: [value, remainingValue],
-                    backgroundColor: ['#42f5da', '#e0dede'],
+                    backgroundColor: ['#ff4b14', '#e0dede'],
                     borderWidth: 1
                 }]
             },
