--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -19,7 +19,7 @@
   }
   .text p {   
     font-size: 25px;
-    color: #636363;
+    color: #ffffff;
     text-align: left; /* Zarovnanie textu vlavo */
     margin-left: 20px;
   }
