--- a/sklad.html
+++ b/sklad.html
@@ -178,7 +178,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer8">
-    <h3 id="widgetLabel8">Vaha 8</h3>
+    <h3 id="widgetLabel8">HK Katana</h3>
     <canvas class="donut-chart" id="donutChart8"></canvas>
     <div class="chart-text" id="chartText8">Loading...</div>
     <div class="last-update" id="lastUpdate8"></div>
