--- a/sklad.html
+++ b/sklad.html
@@ -185,7 +185,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer9">
-    <h3 id="widgetLabel9">Vaha 9</h3>
+    <h3 id="widgetLabel9">HOB</h3>
     <canvas class="donut-chart" id="donutChart9"></canvas>
     <div class="chart-text" id="chartText9">Loading...</div>
     <div class="last-update" id="lastUpdate9"></div>
