--- a/sklad.html
+++ b/sklad.html
@@ -199,7 +199,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer11">
-    <h3 id="widgetLabel11">Vaha 11</h3>
+    <h3 id="widgetLabel11">Katana Waki</h3>
     <canvas class="donut-chart" id="donutChart11"></canvas>
     <div class="chart-text" id="chartText11">Loading...</div>
     <div class="last-update" id="lastUpdate11"></div>
