--- a/sklad.html
+++ b/sklad.html
@@ -192,7 +192,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer10">
-    <h3 id="widgetLabel10">Vaha 10</h3>
+    <h3 id="widgetLabel10">Kreg kratky</h3>
     <canvas class="donut-chart" id="donutChart10"></canvas>
     <div class="chart-text" id="chartText10">Loading...</div>
     <div class="last-update" id="lastUpdate10"></div>
