--- a/sklad.html
+++ b/sklad.html
@@ -171,7 +171,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer7">
-    <h3 id="widgetLabel7">Vaha 7</h3>
+    <h3 id="widgetLabel7">katana Waki</h3>
     <canvas class="donut-chart" id="donutChart7"></canvas>
     <div class="chart-text" id="chartText7">Loading...</div>
     <div class="last-update" id="lastUpdate7"></div>
