--- a/sklad.html
+++ b/sklad.html
@@ -206,7 +206,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer12">
-    <h3 id="widgetLabel12">Vaha 12</h3>
+    <h3 id="widgetLabel12">Vaha HW300</h3>
     <canvas class="donut-chart" id="donutChart12"></canvas>
     <div class="chart-text" id="chartText12">Loading...</div>
     <div class="last-update" id="lastUpdate12"></div>
