--- a/sklad.html
+++ b/sklad.html
@@ -164,7 +164,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer6">
-    <h3 id="widgetLabel6">Samo testuje</h3>
+    <h3 id="widgetLabel6">H300</h3>
     <canvas class="donut-chart" id="donutChart6"></canvas>
     <div class="chart-text" id="chartText6">Loading...</div>
     <div class="last-update" id="lastUpdate6"></div>
